--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat">
   <div class="chat-header clearfix">
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12 d-flex justify-content-center">
             <div class="chat-about">
               <% if @chat.coach == current_user %>
                 <h6 class="m-b-0"><%= @chat.student.name %></h6>
