--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container d-flex justify-content-center">
   <div class="chat">
       <%= render 'chat' %>
   </div>
