--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -263,17 +263,17 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .chat-app .people-list {
-        height: 465px;
-        width: 100%;
-        overflow-x: auto;
-        background: #fff;
-        left: -400px;
-        display: none
-    }
-    .chat-app .people-list.open {
-        left: 0
-    }
+    // .chat-app .people-list {
+    //     height: 465px;
+    //     width: 100%;
+    //     overflow-x: auto;
+    //     background: #fff;
+    //     left: -400px;
+    //     display: none
+    // }
+    // .chat-app .people-list.open {
+    //     left: 0
+    // }
     .chat-app .chat {
         margin: 0
     }
