--- a/app/assets/stylesheets/pages/_accounts.scss
+++ b/app/assets/stylesheets/pages/_accounts.scss
@@ -7,13 +7,13 @@
   padding-bottom: 12px;
 }
 
-.account-charts {
-  padding-left: 24px;
-  padding-right: 24px;
+.charts {
+  padding: 24px;
 }
 
-.accounts-chart h3 {
+.charts h3 {
   font-size: 22px;
+  text-align: center;
 }
 
 .accounts-card {
@@ -78,42 +78,42 @@
   color: $orange;
 }
 
-.chart-header-links {
-  display: flex;
-  justify-content: center;
-  h4 {
-    height: 50vh;
-    line-height: 50vh;
-    text-align: center;
-  }
-}
+// .chart-header-links {
+//   display: flex;
+//   justify-content: center;
+//   h4 {
+//     height: 50vh;
+//     line-height: 50vh;
+//     text-align: center;
+//   }
+// }
 
-.chart-header-link {
-  margin: 0.5rem;
-  padding:0.5rem;
-  color: $primary-color;
-  font-weight: $bold;
+// .chart-header-link {
+//   margin: 0.5rem;
+//   padding:0.5rem;
+//   color: $primary-color;
+//   font-weight: $bold;
 
-  &:hover {
-    color: $primary-dark-color;
-   }
-  &::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: $primary-color;
-    transition: width .4s ease-in;
-  }
-  &:hover::after{
-    width: 100%;
-  }
+//   &:hover {
+//     color: $primary-dark-color;
+//    }
+//   &::after {
+//     content: '';
+//     display: block;
+//     width: 0;
+//     height: 2px;
+//     background: $primary-color;
+//     transition: width .4s ease-in;
+//   }
+//   &:hover::after{
+//     width: 100%;
+//   }
 
-  &.active:after {
-    content: '';
-    display: block;
-    width: 100% !important;
-    height: 2px;
-    background: $primary-color;
-  }
-}
+//   &.active:after {
+//     content: '';
+//     display: block;
+//     width: 100% !important;
+//     height: 2px;
+//     background: $primary-color;
+//   }
+// }
