--- a/app/views/coach/accounts/index.html.erb
+++ b/app/views/coach/accounts/index.html.erb
@@ -1,28 +1,21 @@
 <div class='container'>
-  <div class='flex-space-between'>
-    <h1 class='accounts-header'>Accounts</h1>
-  </div>
+  <h1 class='accounts-header'>Accounts</h1>
 
-
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
-      <a class="nav-link active" id="day-tab" data-toggle="tab" href="#day" role="tab" aria-controls="day" aria-selected="true">day</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#month" role="tab" aria-controls="month" aria-selected="false">month</a>
-    </li>
-  </ul>
   <div class="tab-content" id="myTabContent" >
     <div class="tab-pane fade show active" id="day" role="tabpanel" aria-labelledby="day-tab"><%= render 'day_charts' %></div>
     <div class="tab-pane fade" id="month" role="tabpanel" aria-labelledby="month-tab"><%= render 'month_charts' %></div>
   </div>
+  <div>
+    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="day-tab" data-toggle="tab" href="#day" role="tab" aria-controls="day" aria-selected="true">Daily</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="month-tab" data-toggle="tab" href="#month" role="tab" aria-controls="month" aria-selected="false">Monthly</a>
+      </li>
+    </ul>
+  </div>
 
-
-
-
-
-
-<div class='container'>
   <div class='accounts-container'>
     <% date = "" %>
     <% @lessons_with_orders.reverse.each do |lesson| %>
