--- a/app/views/lessons/_lesson_card.html.erb
+++ b/app/views/lessons/_lesson_card.html.erb
@@ -11,10 +11,12 @@
     </div>
 
     <%# modal button************************ %>
-    <%= link_to 'Details',  lesson_path(lesson), class:'btn btn-secondary btn-sm',  data: { action: "click->lesson#displayShowForm", }, remote: true %>
-    <% if lesson.status && lesson.end_date_time >= Time.now.to_datetime %>
-        <%= link_to "Cancel", cancel_booking_lesson_path(lesson), class:'btn btn-primary btn-sm' %>
-    <% elsif lesson.status && lesson.end_date_time < Time.now.to_datetime && lesson.review.nil? %>
-        <%= link_to "Review", new_lesson_review_path(lesson), class:'btn btn-primary btn-sm' %>
-    <% end %>
+    <div>
+        <%= link_to 'Details',  lesson_path(lesson), class:'btn btn-secondary btn-sm',  data: { action: "click->lesson#displayShowForm", }, remote: true %>
+        <% if lesson.status && lesson.end_date_time >= Time.now.to_datetime %>
+            <%= link_to "Cancel", cancel_booking_lesson_path(lesson), class:'btn btn-primary btn-sm' %>
+        <% elsif lesson.status && lesson.end_date_time < Time.now.to_datetime && lesson.review.nil? %>
+            <%= link_to "Review", new_lesson_review_path(lesson), class:'btn btn-primary btn-sm' %>
+        <% end %>
+    </div>
 </div>
