--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -54,6 +54,8 @@ $breakpoint-width-bootstrap-sm: 575px;
   --background-color-hover: #3d3d3d;
   --text-color: #C9D1D9;
   --text-color-active: #ff5b03b5;
+  --button-text-color: var(--background-color);
+  --button-text-color-hover: var(--text-color);
   --border-color: #C9D1D9;
   --navbar-background-color: transparent;
   --footer-background-color: #313332;
@@ -67,6 +69,8 @@ $breakpoint-width-bootstrap-sm: 575px;
   --background-color-hover: #f1f1f1;
   --text-color: #121212; 
   --border-color: #c3c3c3;
+  --button-text-color: var(--background-color);
+  --button-text-color-hover: var(--text-color);
   --footer-background-color: #f6dcbc;
   --navbar-background-color: var(--footer-background-color);
 
