--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -52,8 +52,10 @@
         <li class="nav-item dropdown">
         <% if current_user.coach_profile && current_user.coach_profile.photo_key %>
           <%= image_tag current_user.coach_profile.photo_key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class='dropdown-toggle mobile-profile' id='navbarDropdown' data-toggle='dropdown'aria-haspopup='true' aria-expanded= 'false' >Profile</div>
         <% else %>
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class='dropdown-toggle mobile-profile' id='navbarDropdown' data-toggle='dropdown'aria-haspopup='true' aria-expanded= 'false' >Profile</div>        
         <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <div class='dropdown-item'>Logged in: <strong><%= current_user.name %></strong></div>
@@ -78,8 +80,11 @@
         </li>
 
         <li class="nav-item nav-notification dropdown" data-controller="notification" data-notification-target="notifications" id="notifications">
-          <a class="nav-notification dropdown-toggle" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-notification dropdown-toggle expanded-notification" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="far fa-bell"></i> <span data-notification-target="unreadCount"></span>
+          </a>
+           <a class="dropdown-toggle mobile-profile" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span data-notification-target="unreadCount">Notifications</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="dropdownNotificationDetails" data-notification-target="notificationDetails">
             <span class="dropdown-item"></span>
