--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
     <% end %>
     <div class='page-container'>
       <%= yield %>
+      <%= render 'shared/scrollbutton' %>
       <footer>
         <%= render 'shared/footer' %>
       </footer>
