--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -103,7 +103,42 @@
   width: 10rem;
 }
 
-.back-btn {
-  font-size: 20px;
-  color: var(--primary-color);
+.scroll-flex {
+  display: flex;
+  justify-content: flex-end;
+}
+#scrollToTopBtmBtn {
+  position: fixed;
+  // position: -webkit-sticky;
+  // position: sticky;
+  right: 1rem;
+  bottom: 1rem;
+  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  color: var(--primary-dark-color);
+  z-index: 99;
+  cursor: pointer;
+  opacity: 0;
+  transition: all .5s ease;
+  transform: translateY(100px);
+
+  .fas.fa-angle-double-up {
+    text-align: center;
+    width: 100%;
+  }
+
+  &.showBtn {
+    opacity: .6;
+    transform: translateY(0);
+
+  &.showBtn:hover {
+    opacity: 1;
+  }
+}
+
+  // .showBtn:hover {
+  //     opacity: 1;
+  // }
 }
