--- a/app/assets/stylesheets/pages/_lessons.scss
+++ b/app/assets/stylesheets/pages/_lessons.scss
@@ -14,7 +14,7 @@
   padding-bottom: 8px;
   transition: 400ms ease-in;
   border-style: solid;
-  border-width: 0.1rem;
+  border-width: 1px;
   border-color: var(--border-color);
   color: var(--text-color);
   font-weight: 300;
