--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -49,8 +49,8 @@ $breakpoint-width-bootstrap-sm: 575px;
   --primary-color: #ff5d03;
   --primary-light-color: #ff5b03;
   --primary-dark-color: #ff3d00;
-  --background-color:#121212;
-  --background-color-light: #171717;
+  --background-color: #1F2124;
+  --background-color-light: #24272ad3;
   --background-color-hover: #3d3d3d;
   --text-color: #C9D1D9;
   --text-color-active: #ff5b03b5;
