--- a/app/views/lessons/_lessons_list.html.erb
+++ b/app/views/lessons/_lessons_list.html.erb
@@ -16,4 +16,6 @@
           <% end %>
         </div>
     <% end %>
+    <%== pagy_bootstrap_nav(@pagy, link_extra: 'data-action="click->lesson#displayLessons" data-remote="true"') %>
   </div>
+  
