--- a/app/views/coach/lessons/_show.html.erb
+++ b/app/views/coach/lessons/_show.html.erb
@@ -11,11 +11,14 @@
     </button>
   </div>
   <div class="modal-body" data-lesson-target='modalContent'>
-  <div class='float-right'>
     <% if current_user.access_token %>
-    <input class="checkbox" data-lesson-id='<%=lesson.id%>' <%= lesson.google_event_id ? 'checked' : '' %> id='syncEventToGoogleCheckbox' type="checkbox" role='button' data-action='click->lesson#toggleSyncEventToGoogle'> <label for='syncEventToGoogleCheckbox' role='button'>Sync to Google Calendar</label>
+    <div class='w-100'>
+      <div class='float-right'>
+        <input class="checkbox" data-lesson-id='<%=lesson.id%>' <%= lesson.google_event_id ? 'checked' : '' %> id='syncEventToGoogleCheckbox' type="checkbox" role='button' data-action='click->lesson#toggleSyncEventToGoogle'> <label for='syncEventToGoogleCheckbox' role='button'>Google Calendar</label>
+      </div>
+    </div>
     <% end %>
-   </div>
+    <p><%= lesson.start_date_time %></p>
       <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%I:%M%p") %> - <%= lesson.end_date_time.strftime("%I:%M%p") %> </p>
       <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
       <% if current_page?(coach_lessons_path)%>
