product checklist - title and favicon tags set

--- a/app/views/coach/accounts/index.html.erb
+++ b/app/views/coach/accounts/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | Coach Accounts
+<% end %>
+
 <div class='container'>
   <h1 class='accounts-header'>Accounts</h1>
 
