--- a/app/views/coach/coach_profiles/edit.html.erb
+++ b/app/views/coach/coach_profiles/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | Coach Profile
+<% end %>
+
 <div class='form container'>
   <div class='header header-flex'>
     <h2>Edit coach profile</h2>
