--- a/app/views/coach/coach_profiles/show.html.erb
+++ b/app/views/coach/coach_profiles/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | Coach Profile
+<% end %>
+
 <div class="container">
   <div class='coach-profile-header header-flex'>
     <h1>My Coach Profile</h1>
