--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | <%= @coach.name.capitalize %>
+<% end %>
+
 <div class="container">
  <div class='header header-flex'>
   <h1><%= @coach.name.capitalize %>'s Profile <span>
