--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | My Profile
+<% end %>
+
 <div class='container form'>
   <div class='header header-flex'>
     <h2 class='header'>Edit <%= resource_name.to_s.humanize %></h2>
