--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | Find a Sport
+<% end %>
+
 <div class="container">
   <h1><%= @sports_heading %></h1>
   <% if @query %>
