--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | My Chats
+<% end %>
+
 <div class="container">
   <h1 class="header">My Chats</h1>
     <div class="row clearfix">
