--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  SportMe | <%= @sport.name.capitalize %>
+<% end %>
+
 <div class='container'>
 
   <div class="coach-card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @sport.picture_url %>)">
