--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  max-height: 7rem;
+  max-height: 6rem;
 }
 .footer-links {
   display: flex;
@@ -17,7 +17,7 @@
 .footer-links a {
   color:var(--primary-color);
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   padding: 0px 10px;
 }
 .footer-links a:hover {
@@ -33,8 +33,9 @@
   flex-direction: column;
   padding-top: 20px;
   width: 300px;
+  font-size: 0.8rem;
   h2 {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     font-weight: $light;
   }
 }
@@ -43,6 +44,7 @@
   background-color: var(--primary-color);
   color: black;
   transition: 200ms ease;
+  font-size: 0.8rem;
 
   &:hover {
     background-color: var(--primary-dark-color);
@@ -63,6 +65,9 @@
   }
 }
 
+.footer-copyright {
+  font-size: 0.8rem;
+}
 
 @media (max-width: $breakpoint-width-medium) {
   .footer {
