--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,7 +14,7 @@
 
   <div class="footer-subscribe">
     <h2>Get updates</h2>
-    <div class="input-group mb-3 ">
+    <div class="input-group input-group-sm mb-1">
       <input type="text" class="form-control" placeholder="Enter your e-mail address" aria-label="Recipient's username" aria-describedby="button-addon2">
       <div class="input-group-append">
         <button class="btn btn-primary-footer" type="button" id="button-addon2">Submit</button>
