--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -6,6 +6,13 @@
   color: black
 }
 
+.filter-input {
+  width: 5rem;
+  height: 2rem;
+  padding: 0;  
+  margin-left: .5rem;
+}
+
 .d-none {
   display: none;
 }
