--- a/app/views/coach/accounts/index.html.erb
+++ b/app/views/coach/accounts/index.html.erb
@@ -66,5 +66,5 @@
       </div>
     </div>
   </div>
-  <%= link_to "<<", root_path, class: 'back-btn' %>
+  <%= link_to "<<", :back, class: 'back-btn' %>
 </div>
