--- a/app/views/lessons/_list.html.erb
+++ b/app/views/lessons/_list.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <%= render 'lessons_list'%>
-  <%= link_to "<<", root_path, class: 'back-btn' %>
+  <%= link_to "<<", :back, class: 'back-btn' %>
   <%# lesson modal %>
   <div class="modal fade" id="lessonModal"  tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true" data-lesson-target='lessonModal'>
     <div class="modal-dialog" role="document" data-lesson-target='modalContent'></div>
