--- a/app/views/locations/_location_filter.html.erb
+++ b/app/views/locations/_location_filter.html.erb
@@ -1,10 +1,11 @@
 <%= form_for_filterrific @filterrific do |f| %>
-  <div>
-    Sport
+  <div class='d-flex'>
+    Sport:
     <%= f.select(
       :with_sport,
       @filterrific.select_options[:with_sport],
-      { include_blank: '- Any -' }
+      { include_blank: '- Any -' },
+      class:'form-control filter-input'
     ) %>
   </div>
 
@@ -12,6 +13,7 @@
     <%= link_to(
       'Reset filters',
       reset_filterrific_url,
+      class:'reset-filter'
     ) %>
   </div>
 <% end %>
