styling for map

--- a/app/views/locations/_map.html.erb
+++ b/app/views/locations/_map.html.erb
@@ -1,7 +1,4 @@
 <div id="filterrific_results">
-  <div id="map"
-    style="width: 100%; height: 300px;"
-    data-markers="<%= markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div class="map-lg" id="map" data-markers="<%= markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
