--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -67,6 +67,7 @@
   transform-origin: top;
   background-color: var(--background-color);
   border: 1px solid var(--border-color);
+  font-size: 0.8rem;
 
   .dropdown-item {
     padding: 0.25rem 1.5rem;
@@ -134,7 +135,7 @@
 
 @media (max-width: $breakpoint-width-bootstrap-sm) {
   //change display for active class
-  .nav-link {  
+  .nav-link {
     &::after {
       display: none;
     }
@@ -145,7 +146,7 @@
     &.active::after {
       display: none;
     }
-  
+
     &.active {
       color: var(--text-color-active) !important;
     }
