work-in-progress

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -19,6 +19,7 @@
 
 
 .carousel-indicators {
+  position: relative;
   bottom: -2.4375rem;
   li {
     background-color: var(--text-color);
@@ -46,5 +47,5 @@
 }
 
 .coach-carousel-inner {
-  padding: 0px 20px;
+  padding: 20px 40px;
 }
